gcp_config_file/my_services.yml
apiVersion: v1
kind: Service
metadata:
  name  : my-laravel-service
  labels:
    env  : prod
    owner: BagratHarutyunyan
spec:
  selector:
    project: k8s
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 80
  type: LoadBalancer
