gcp_config_file/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravelweb

spec:
  rules:
  - host: venom.local 
    http:
      paths:
        - backend:
            serviceName: main
            servicePort: 8000
